--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:main 
+      - docker push 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:main .
       - echo Updating Kubernetes manifests...
       - sed -i "390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:main" k8/deployment.yaml
       - echo Deploying to EKS...
