--- a/k8/deployment.yaml
+++ b/k8/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: node-app
-        image: REPLACE_IMAGE
+        image: 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:latest
         ports:
         - containerPort: 3000
 ---
