--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,6 +8,8 @@ phases:
       # - ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli
       - echo Verifying AWS CLI installation...
       - aws --version
+      - echo Verifying Docker installation...
+      - docker --version
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 390402565417.dkr.ecr.us-west-2.amazonaws.com
       - REPOSITORY_URI=390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app
