--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,9 +3,9 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip awscliv2.zip
-      - ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli
+      # - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      # - unzip awscliv2.zip
+      # - ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli
       - echo Verifying AWS CLI installation...
       - aws --version
       - echo Installing Docker...
