--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,32 +1,31 @@
-
 version: 0.2
+
 phases:
   pre_build:
     commands:
-      # - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      # - unzip awscliv2.zip
-      # - ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli
-      # - echo Verifying AWS CLI installation...
-      # - aws --version
+      - set -x
+      - echo "Verifying AWS CLI and Docker"
+      - aws --version
+      - docker --version
+      - aws sts get-caller-identity
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 390402565417.dkr.ecr.us-west-2.amazonaws.com
       - REPOSITORY_URI=390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app
-  
+
   build:
     commands:
       - echo Building the Docker image...
       - docker build -t nodejs-eks-app .
-      # - docker build -t 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:main .
-      - docker tag nodejs-eks-app:latest 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:latest
+      - docker tag nodejs-eks-app:latest $REPOSITORY_URI:latest
+
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push 390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:latest 
-      - echo Updating Kubernetes manifests...
-      # - sed -i "390402565417.dkr.ecr.us-west-2.amazonaws.com/nodejs-eks-app:main" k8/deployment.yaml
+      - docker push $REPOSITORY_URI:latest
       - echo Deploying to EKS...
       - aws eks update-kubeconfig --region us-west-2 --name nodejs-eks-app
       - kubectl apply -f k8/
+
 artifacts:
   files:
     - k8/deployment.yaml
