--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
+      docker: 20
     commands:
       - echo Installing dependencies...
       - curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.29.1/2024-03-06/bin/linux/amd64/kubectl
