--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -45,6 +45,12 @@ phases:
       - kubectl get nodes || echo "Failed to get nodes"
       - echo Applying Kubernetes manifests...
       - kubectl apply -f k8/ || echo "Failed to apply k8 manifests"
+      - echo Verifying deployments...
+      - kubectl get deployments || echo "No deployments found"
+      - echo Verifying pods...
+      - kubectl get pods || echo "No pods found"
+      - echo Describing deployment...
+      - kubectl describe deployment nodejs-app || echo "Failed to describe deployment"
 
 artifacts:
   files:
