--- a/k8/configmap.yaml
+++ b/k8/configmap.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: aws-auth
-  namespace: kube-system
+  namespace: default
 data:
   mapRoles: |
     - rolearn: arn:aws:iam::390402565417:role/service-role/codebuild-Mytest-project-service-role
-      username: codebuild
+      username: arn:aws:iam::390402565417:root
       groups:
         - system:masters
