--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,9 +1,9 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      docker: 20
+  # install:
+    # runtime-versions:
+    #   docker: 20
     commands:
       - echo Installing dependencies...
       - yum update -y
