--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,29 +1,23 @@
+
 version: 0.2
 
 phases:
   pre_build:
     commands:
-      - set -x
-      - echo "Verifying AWS CLI and Docker"
-      - aws --version
-      - docker --version
-      - aws sts get-caller-identity
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 390402565417.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=390402565417.dkr.ecr.us-east-1.amazonaws.com/my-app-task
-
+      - REPO_URI=390402565417.dkr.ecr.us-east-1.amazonaws.com/my-app-task-test
   build:
     commands:
-      - echo Building the Docker image...
-      - docker build -t my-app-task .
-      - docker tag my-app-task:latest $REPOSITORY_URI:latest
-
+      - echo Building Docker image...
+      - docker build -t my-app .
+      - docker tag my-app:latest $REPO_URI:latest
   post_build:
     commands:
-      - echo Pushing Docker image...
-      - docker push $REPOSITORY_URI:latest
-      - echo Writing image definitions file...
-      - echo '[{"name":"my-app-task","imageUri":"'$REPOSITORY_URI:latest'"}]' > imagedefinitions.json
+      - echo Pushing image to ECR...
+      - docker push $REPO_URI:latest
+      - echo Generating imagedefinitions.json...
+      - printf '[{"name":"my-app-task","imageUri":"%s"}]' $REPO_URI:latest > imagedefinitions.json
 
 artifacts:
   files:
